# sphere-game-rs

./: .gitignore  Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: entity.rs  input.rs  lib.rs
crates/component/: Cargo.toml
crates/component/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: common.rs  engine.rs  entity.rs  main.rs  state_manager.rs
crates/engine/src/systems/: input.rs  mod.rs
crates/engine/src/systems/render/: mod.rs
crates/engine/src/systems/render/subsystems/: mod.rs  static_mesh.rs
crates/engine/src/systems/simulation/: camera.rs  mod.rs  physics.rs
crates/engine/src/vulkan/: depth_buffer.rs  render_pass.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: lib.rs
crates/gfx_camera/: Cargo.toml
crates/gfx_camera/src/: lib.rs
crates/gfx_static_mesh/: Cargo.toml
crates/gfx_static_mesh/src/: lib.rs
crates/network_utils/: Cargo.toml
crates/network_utils/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: entity.rs  lib.rs
crates/sim_camera/: Cargo.toml
crates/sim_camera/src/: lib.rs
crates/sim_network_client/: Cargo.toml
crates/sim_network_client/src/: lib.rs
crates/sim_network_server/: Cargo.toml
crates/sim_network_server/src/: lib.rs
crates/sim_physics/: Cargo.toml
crates/sim_physics/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: device.rs  frame.rs  framebuffers.rs  mesh.rs  pipeline.rs  pipeline_layouts.rs  swapchain.rs
res/meshes/: cube.glb  suzanne.glb
res/shaders/: default.frag  default.vert
src/: common.rs  components.rs  engine.rs  entity.rs  main.rs  message_bus.rs  state_manager.rs  thread_pool.rs
src/systems/: camera.rs  input.rs  mod.rs  physics.rs  static_mesh.rs
src/systems/game/: mod.rs
src/systems/game/subsystems/: camera.rs  mod.rs  physics.rs
src/systems/graphics/: mod.rs
src/systems/graphics/vulkan/: allocator.rs  descriptor_set_layouts.rs  device.rs  instance.rs  mod.rs  pipeline.rs  pipeline_layouts.rs  swapchain.rs
src/systems/input/: mod.rs
src/systems/physics/: mod.rs
src/systems/render/: mod.rs
src/systems/render/subsystems/: mod.rs  static_mesh.rs
src/vulkan/: framebuffers.rs  mesh.rs  mod.rs
