[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]
nalgebra-glm = "0.15"
winit = "0.25"

component = { path = "../component" }
entity = { path = "../entity" }
event = { path = "../event" }
gfx_static_mesh = { path = "../gfx_static_mesh" }
sim_camera = { path = "../sim_camera" }
sim_physics = { path = "../sim_physics" }
system = { path = "../system" }
task = { path = "../task" }
