[package]
name = "sphere-game-rs"
version = "0.0.0"
authors = ["JamesOrdner <5782729+JamesOrdner@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"

client = { path = "../client" }
server = { path = "../server" }
