[package]
name = "gfx_camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.15"

component = { path = "../component" }
entity = { path = "../entity" }
event = { path = "../event" }
gfx = { path = "../gfx" }
