[package]
name = "sim_network_client"
version = "0.0.0"
edition = "2021"

[dependencies]
laminar = "0.5"
nalgebra-glm = "0.15"

component = { path = "../component" }
entity = { path = "../entity" }
event = { path = "../event" }
network_utils = { path = "../network_utils" }
system = { path = "../system" }
task = { path = "../task" }
