[package]
name = "sim_physics"
version = "0.0.0"
edition = "2021"

[dependencies]
nalgebra-glm = "0.15"

component = { path = "../component" }
data = { path = "../data" }
entity = { path = "../entity" }
event = { path = "../event" }
network_utils = { path = "../network_utils" }
system = { path = "../system" }
task = { path = "../task" }
